next-firebase-auth tutorial

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,9 @@
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+Find Tutorials related to Web Development at one place.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Features
 
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+- Simple
+- Contributory
+- Developer Friendly (Ex. Copy Buttons, Code Formatting)
